--- a/src/style.css
+++ b/src/style.css
@@ -107,41 +107,35 @@ color: var(--color-primary-white);
 }
 
 
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+body{
+  margin: 10px;
 }
 
-ul {
+
+#carousel
+{
+  place-items: center;
   display: flex;
   list-style: none;
-  max-width: 600px;
-  margin-block: 2rem;
-  margin-inline: auto;
   overflow: auto;
   scroll-snap-type: x mandatory;
 }
 
 li {
+  margin: 2px;
+  border: 2px  solid var(--color-brown-dark);
   display: grid;
   place-items: center;
-  color: white;
-  font-size: 3rem;
-
-  aspect-ratio: 2/1;
-  width: 100%;
   flex-shrink: 0;
   scroll-snap-align: start;
 }
 
 li:nth-child(odd) {
-  background-color: salmon;
+  background-color: var(--color-primary-white);
 }
 
 li:nth-child(even) {
-  background-color: rebeccapurple;
+  background-color: var(--color-primary-white);
 }
 
 
