--- a/src/style.css
+++ b/src/style.css
@@ -122,6 +122,68 @@ button {
 header {
     background-color: var(--color-brown);
 }
+/*Dropdown menu*/
+.navbar {
+    overflow: hidden;
+    background-color: var(--color-brown);
+    margin-block: 2px;
+    margin-right: 10px;
+  }
+  
+  .navbar a {
+    float: left;
+    font-size: 16px;
+    color: var(--color-primary-white);
+    text-align: right;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  .dropdown {
+    float: left;
+    overflow: hidden;
+  }
+  
+  .dropdown .dropbtn {
+    font-size: 16px;  
+    border: none;
+    outline: none;
+    color: var(--color-primary-white);
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  
+  .navbar a:hover, .dropdown:hover .dropbtn {
+    color: var(--color-yellow);
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: var(--color-brown);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    float: none;
+    color: var(--color-primary-white);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {
+    color: var(--color-yellow);
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
 
 body {
   background-color: var(--color-primary-white);
