--- a/src/style.css
+++ b/src/style.css
@@ -5,12 +5,27 @@
 :root {
 
   /*KNAPPER*/
+
+  /*almindelig knap*/
 --button-width-web: 178px;
 --button-height-web: 62px;
 --button-radius-web: 10px;
 --button-background-standard: #584239 ;
 --button-text-color: #ffffff;
---button-dropshadow: 0px 10px 0px black, 0 0 2px black, 0 0 px black;
+--button-dropshadow: 5px 10px 20px black;
+--button-hover: #97bab3;
+--button-inner-shadow:inset 0 5 10px black;
+
+/*cta knap*/
+--cta-button-width-web: 359px;
+--cta-button-height-web: 59px;
+--cta-button-radius-web: 10px;
+--cta-button-background-standard: #c6613c ;
+--cta-button-text-color: #ffffff;
+--cta-button-dropshadow: 5px 10px 20px black;
+--cta-button-hover: #97bab3;
+
+
 
 
 
@@ -233,5 +248,30 @@ button {
 height: var(--button-height-web);
 background-color: var(--button-background-standard);
 box-shadow: var(--button-dropshadow);  
+border-radius: var(--button-radius-web);
 
+}
+
+button:hover{
+
+  background-color: var(--button-hover);
+  color: var(--color-brown-dark)
+
+}
+
+button:active{
+  background-color: var(--color-blue-dark);
+  box-shadow: var(--button-inner-shadow);
+  box-shadow: var(--button-dropshadow);
+}
+
+.ctaknap {
+
+ width: var(--cta-button-width-web); 
+height:var(--cta-button-height-web) ;
+border-radius: var(--cta-button-radius-web); 
+background-color: var(--cta-button-background-standard);
+
+color: var(--color-primary-white);
+--cta-button-dropshadow: 5px 10px 20px black;
 }
