--- a/src/style.css
+++ b/src/style.css
@@ -106,7 +106,7 @@
   /*SKRIFTTYPER*/
   --font-family-h1: Exo 2, sans-serif;
   --font-family-h2-h4: Palanquin, sans-serif;
-  --font-family-p: Palatino Linotype, serif;
+  --font-family-p: Roboto, serif;
 
   /*SKRIFTSTØRRELSE*/
   --font-size-h1-mobil: 25px;
@@ -133,6 +133,7 @@
   --line-height-reset: 1;
   --line-height-text: 1.5;
 }
+
 /*LISTE*/
 ul {
   list-style-type: square;
@@ -146,6 +147,9 @@ li {
 li span {
   color: #241c19;
   /* Text Color */
+}
+h1{
+    font-family: var(--font-family-h1)
 }
 
 /* KNAP */
@@ -162,7 +166,7 @@ header {
   overflow: hidden;
   background-color: var(--color-brown);
   margin-block: 2px;
-  margin-right: 10px;
+
 }
 
 .navbar a {
@@ -188,6 +192,10 @@ header {
   background-color: inherit;
   font-family: inherit;
   margin: 0;
+  width: 0;
+  height: 0;
+  background-color: none;
+  box-shadow: none;
 }
 
 .navbar a:hover,
@@ -298,9 +306,6 @@ header button {
   box-shadow: none;
 }
 
-.toggle-btn {
-  display: none;
-}
 
 header a {
   list-style: none;
@@ -315,8 +320,9 @@ header a {
     display: block;
     min-width: 44px;
     min-height: 44px;
-    font-size: 1.1rem;
+    font-size: 2rem;
     cursor: pointer;
+    margin-block: 9px;
   }
 
   nav {
