--- a/src/style.css
+++ b/src/style.css
@@ -4,40 +4,25 @@
 
 :root {
   /*KNAPPER*/
-<<<<<<< HEAD
 
   /*almindelig knap*/
---button-width-web: 178px;
---button-height-web: 62px;
---button-radius-web: 10px;
---button-background-standard: #584239 ;
---button-text-color: #ffffff;
---button-dropshadow: 5px 10px 20px black;
---button-hover: #97bab3;
---button-inner-shadow:inset 0 5 10px black;
-
-/*cta knap*/
---cta-button-width-web: 359px;
---cta-button-height-web: 59px;
---cta-button-radius-web: 10px;
---cta-button-background-standard: #c6613c ;
---cta-button-text-color: #ffffff;
---cta-button-dropshadow: 5px 10px 20px black;
---cta-button-hover: #97bab3;
-
-
-
-
-
-
-=======
   --button-width-web: 178px;
   --button-height-web: 62px;
   --button-radius-web: 10px;
   --button-background-standard: #584239;
   --button-text-color: #ffffff;
-  --button-dropshadow: 0px 10px 0px black, 0 0 2px black, 0 0 px black;
->>>>>>> c7e1be9b2675e2b31f7c84653751d6b8ce3110cc
+  --button-dropshadow: 5px 10px 20px black;
+  --button-hover: #97bab3;
+  --button-inner-shadow: inset 0 5 10px black;
+
+  /*cta knap*/
+  --cta-button-width-web: 359px;
+  --cta-button-height-web: 59px;
+  --cta-button-radius-web: 10px;
+  --cta-button-background-standard: #c6613c;
+  --cta-button-text-color: #ffffff;
+  --cta-button-dropshadow: 5px 10px 20px black;
+  --cta-button-hover: #97bab3;
 
   /*FARVER*/
   /*HVID*/
@@ -148,8 +133,8 @@ li span {
   color: #241c19;
   /* Text Color */
 }
-h1{
-    font-family: var(--font-family-h1)
+h1 {
+  font-family: var(--font-family-h1);
 }
 
 /* KNAP */
@@ -166,7 +151,6 @@ header {
   overflow: hidden;
   background-color: var(--color-brown);
   margin-block: 2px;
-
 }
 
 .navbar a {
@@ -259,43 +243,32 @@ body {
 }
 
 button {
-<<<<<<< HEAD
- width: var(--button-width-web);
-height: var(--button-height-web);
-background-color: var(--button-background-standard);
-box-shadow: var(--button-dropshadow);  
-border-radius: var(--button-radius-web);
-
+  width: var(--button-width-web);
+  height: var(--button-height-web);
+  background-color: var(--button-background-standard);
+  box-shadow: var(--button-dropshadow);
+  border-radius: var(--button-radius-web);
 }
 
-button:hover{
-
+button:hover {
   background-color: var(--button-hover);
-  color: var(--color-brown-dark)
-
+  color: var(--color-brown-dark);
 }
 
-button:active{
+button:active {
   background-color: var(--color-blue-dark);
   box-shadow: var(--button-inner-shadow);
   box-shadow: var(--button-dropshadow);
 }
 
 .ctaknap {
+  width: var(--cta-button-width-web);
+  height: var(--cta-button-height-web);
+  border-radius: var(--cta-button-radius-web);
+  background-color: var(--cta-button-background-standard);
 
- width: var(--cta-button-width-web); 
-height:var(--cta-button-height-web) ;
-border-radius: var(--cta-button-radius-web); 
-background-color: var(--cta-button-background-standard);
-
-color: var(--color-primary-white);
---cta-button-dropshadow: 5px 10px 20px black;
-}
-=======
-  width: var(--button-width-web);
-  height: var(--button-height-web);
-  background-color: var(--button-background-standard);
-  box-shadow: var(--button-dropshadow);
+  color: var(--color-primary-white);
+  --cta-button-dropshadow: 5px 10px 20px black;
 }
 
 /* BURGERMENU */
@@ -305,7 +278,6 @@ header button {
   background-color: none;
   box-shadow: none;
 }
-
 
 header a {
   list-style: none;
@@ -359,4 +331,3 @@ header a {
     top: 12%;
   }
 }
->>>>>>> c7e1be9b2675e2b31f7c84653751d6b8ce3110cc
