--- a/src/style.css
+++ b/src/style.css
@@ -3,9 +3,34 @@
 @tailwind utilities;
 
 :root {
-  /*KNAPPER*/
-<<<<<<< HEAD
 
+
+  /*form*/
+--form-background: var(--color-white-dark);
+--form-border-radius: 0px 50px 0px 50px;
+--form-padding:1.5em;
+  /*label*/
+  
+ --label-border-radius: 20px 20px 20px 20px ;
+
+
+
+  /*CARDS*/
+
+  /*analogcard*/
+
+  --analog-card-height: auto;
+  --analog-card-width: auto;
+  --analog-card-background: var(--color-white-dark) ;
+  --analog-card-padding:4em;
+
+  /*Hvadbetyder*/
+--spørgsmål-card-height: auto;
+--spørgsmål-card-width: screen;
+--spørgsmål-card-background:var(--color-white-dark);
+--spørgsmål-card-shadow:var(--button-dropshadow);
+--spørgsmål-card-padding:20px;
+  /*KNAPPER*/
   /*almindelig knap*/
 --button-width-web: 178px;
 --button-height-web: 62px;
@@ -22,7 +47,7 @@
 --cta-button-radius-web: 10px;
 --cta-button-background-standard: #c6613c ;
 --cta-button-text-color: #ffffff;
---cta-button-dropshadow: 5px 10px 20px black;
+--cta-button-dropshadow:  5px 10px 20px black;
 --cta-button-hover: #97bab3;
 
 
@@ -30,14 +55,7 @@
 
 
 
-=======
-  --button-width-web: 178px;
-  --button-height-web: 62px;
-  --button-radius-web: 10px;
-  --button-background-standard: #584239;
-  --button-text-color: #ffffff;
-  --button-dropshadow: 0px 10px 0px black, 0 0 2px black, 0 0 px black;
->>>>>>> c7e1be9b2675e2b31f7c84653751d6b8ce3110cc
+  
 
   /*FARVER*/
   /*HVID*/
@@ -132,6 +150,10 @@
   --line-height-heading: 1.25;
   --line-height-reset: 1;
   --line-height-text: 1.5;
+}
+
+body{
+  margin: 20px;
 }
 /*LISTE*/
 ul {
@@ -251,7 +273,6 @@ body {
 }
 
 button {
-<<<<<<< HEAD
  width: var(--button-width-web);
 height: var(--button-height-web);
 background-color: var(--button-background-standard);
@@ -281,13 +302,73 @@ border-radius: var(--cta-button-radius-web);
 background-color: var(--cta-button-background-standard);
 
 color: var(--color-primary-white);
---cta-button-dropshadow: 5px 10px 20px black;
+box-shadow: var(--button-dropshadow);
 }
-=======
-  width: var(--button-width-web);
-  height: var(--button-height-web);
-  background-color: var(--button-background-standard);
+
+.ctaknap:hover{ 
+  background-color: var(--cta-button-hover);
+  color: var(--color-brown-dark);
+}
+
+.ctaknap:active{
+  background-color: var(--color-blue-dark);
+  box-shadow: var(--button-inner-shadow);
   box-shadow: var(--button-dropshadow);
+}
+
+
+.hvadbetyder1, .hvadbetyder2, .hvadbetyder3{
+height:var(--spørgsmål-card-height);
+ width: var(--spørgsmål-card-width); 
+box-shadow: var(--spørgsmål-card-shadow); 
+padding:var(--spørgsmål-card-padding);
+}
+.hvadbetyder1{
+  background-color: #E7D3CC;
+  border:4px solid var(--color-rust) ;
+
+}
+
+.hvadbetyder2{
+  background-color: var(--color-blue-light);
+  border:4px solid var(--color-blue) ;
+
+}
+.hvadbetyder3{
+  background-color: var(--color-green-light);
+  border:4px solid var(--color-green) ;
+
+}
+
+.analogcard {
+  height: var(--analog-card-height);
+  width: var(--analog-card-width);
+  background: var(--analog-card-background);
+  box-shadow: var(--shadow-level-3);
+  text-align: center;
+  padding:var(--analog-card-padding)
+}
+
+form{
+  background-color: var(--form-background);
+  border-radius: var(--form-border-radius);
+  padding: var(--form-padding);
+}
+
+ .input {
+  width: screen;
+  border-radius: 10px 10px 10px 10px;
+}
+
+.spørgsmål {
+  border: 4px solid var(--color-green);
+  padding: var(--form-padding);
+  text-align: center;
+}
+
+.smalfilm_og_kvalitet {
+  background-color: var(--color-brown-light);
+  color: var(--color-white-clean);
 }
 
 /* BURGERMENU */
@@ -353,4 +434,3 @@ header a {
     top: 12%;
   }
 }
->>>>>>> c7e1be9b2675e2b31f7c84653751d6b8ce3110cc
